# anki-tex

./: Cargo.toml  LICENSE  install.sh
src/: ankitex.sty  api.rs  lib.rs  main.rs  parse_file.rs  types.rs
templates/: ankitex.sty  custom.sty
