[package]
name = "anki"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = "3.2.4"
fasthash = "0.4.0"
lazy_static = "1.4.0"
notify = "5.1.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
